--- a/src/scss/abstracts/_config.scss
+++ b/src/scss/abstracts/_config.scss
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@900&family=Outfit:wght@300&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 
 $gold: #D5966C;
 $white: #FFFFFF;
@@ -10,11 +13,11 @@ $dark-gray: #444444;
 $almost-black: #151515;
 
 %heading-font {
-  font-family: 'Big Shoulders Display Black';
+  font-family: 'Big Shoulders Display', cursive;
 }
 
 %body-font {
-  font-family: 'Outfit Light';
+  font-family: 'Outfit', sans-serif;
 }
 
 %heading-xl {
@@ -57,6 +60,11 @@ $almost-black: #151515;
   background: url($url);
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+body {
+  color: $almost-black;
+  @extend %body-font;
 }
 
 button {
