--- a/src/scss/abstracts/_home-tablet.scss
+++ b/src/scss/abstracts/_home-tablet.scss
@@ -4,6 +4,7 @@
   h1 {
     font-size: 70px;
     line-height: 70px;
+    color: $almost-black;
   }
 
   h2 {
